# PortfolioIQ

./: .env.example  .gitignore  CLAUDE.md  LICENSE  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: fd301443d352_initial.py
backend/: config.py  database.py  main.py
backend/models/: __init__.py  account_summary.py  fundamentals.py  market_data.py  position.py  recommendation.py  research_cache.py  signal.py  sync_log.py  transaction.py  user_preferences.py  watchlist.py
backend/services/: ibkr_client.py
docs/: ARCHITECTURE.md  DATABASE.md  INTEGRATIONS.md  PRODUCT.md  STATUS_ARCH.md  STATUS_PM.md  STRATEGIES.md  TASKS.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
tests/: conftest.py  test_models.py
tests/routers/: test_health.py
tests/services/: test_ibkr_client.py
