[project]
name = "portfolioiq"
version = "0.1.0"
description = "Local investment portfolio monitor and recommendation engine"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "rohitvaishnav26" }]

dependencies = [
  # Web framework
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",

  # Database
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.14.0",

  # Settings
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.0",

  # IBKR
  "ib_insync>=0.9.86",

  # Market data & analysis
  "yfinance>=0.2.50",
  "pandas>=2.2.0",
  "pandas-ta>=0.3.14b",
  "numpy>=2.0.0",

  # AI / Agents
  "anthropic>=0.40.0",
  "mcp>=1.0.0",

  # HTTP client
  "httpx>=0.28.0",

  # Scheduling
  "apscheduler>=3.11.0",

  # Utilities
  "tenacity>=9.0.0",
  "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-httpx>=0.35.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "types-python-dateutil>=2.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
